--- a/index.html
+++ b/index.html
@@ -30,7 +30,66 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <!-- 8AM Timeblock -->
+      <div class="row justify-content-center time-block">
+        <div class="col-1 hour">12 PM</div>
+        <p class="col-6 description"></p>
+        <button class="btn saveBtn col-1"></button>
+      </div>
+      <!-- 9AM Timeblock -->
+      <div class="row justify-content-center time-block">
+        <div class="col-1 hour">9 AM</div>
+        <p class="col-6 description"></p>
+        <button class="btn saveBtn col-1"></button>
+      </div>
+      <!-- 10AM Timeblock -->
+      <div class="row justify-content-center time-block">
+        <div class="col-1 hour">10 AM</div>
+        <p class="col-6 description"></p>
+        <button class="btn saveBtn col-1"></button>
+      </div>
+      <!-- 11AM Timeblock -->
+      <div class="row justify-content-center time-block">
+        <div class="col-1 hour">11 AM</div>
+        <p class="col-6 description"></p>
+        <button class="btn saveBtn col-1"></button>
+      </div>
+      <!-- 12PM Timeblock -->
+      <div class="row justify-content-center time-block">
+        <div class="col-1 hour">12 PM</div>
+        <p class="col-6 description"></p>
+        <button class="btn saveBtn col-1"></button>
+      </div>
+      <!-- 1PM Timeblock -->
+      <div class="row justify-content-center time-block">
+        <div class="col-1 hour">1 PM</div>
+        <p class="col-6 description"></p>
+        <button class="btn saveBtn col-1"></button>
+      </div>
+      <!-- 2PM Timeblock -->
+      <div class="row justify-content-center time-block">
+        <div class="col-1 hour">2 PM</div>
+        <p class="col-6 description"></p>
+        <button class="btn saveBtn col-1"></button>
+      </div>
+      <!-- 3PM Timeblock -->
+      <div class="row justify-content-center time-block">
+        <div class="col-1 hour">3 PM</div>
+        <p class="col-6 description"></p>
+        <button class="btn saveBtn col-1"></button>
+      </div>
+      <!-- 4PM Timeblock -->
+      <div class="row justify-content-center time-block">
+        <div class="col-1 hour">4 PM</div>
+        <p class="col-6 description"></p>
+        <button class="btn saveBtn col-1"></button>
+      </div>
+      <!-- 5PM Timeblock -->
+      <div class="row justify-content-center time-block">
+        <div class="col-1 hour">5 PM</div>
+        <p class="col-6 description"></p>
+        <button class="btn saveBtn col-1"></button>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
