--- a/index.html
+++ b/index.html
@@ -1,99 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Work Day Scheduler</title>
-  </head>
 
-  <body>
-    <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <!-- Displays the current Day -->
-      <p id="currentDay" class="lead"></p>
-    </header>
-    <div class="container">
-      <!-- 8AM Timeblock -->
-      <div class="row justify-content-center time-block">
-        <div class="col-1 hour">12 PM</div>
-        <p class="col-6 description"></p>
-        <button class="btn saveBtn col-1"></button>
-      </div>
-      <!-- 9AM Timeblock -->
-      <div class="row justify-content-center time-block">
-        <div class="col-1 hour">9 AM</div>
-        <p class="col-6 description"></p>
-        <button class="btn saveBtn col-1"></button>
-      </div>
-      <!-- 10AM Timeblock -->
-      <div class="row justify-content-center time-block">
-        <div class="col-1 hour">10 AM</div>
-        <p class="col-6 description"></p>
-        <button class="btn saveBtn col-1"></button>
-      </div>
-      <!-- 11AM Timeblock -->
-      <div class="row justify-content-center time-block">
-        <div class="col-1 hour">11 AM</div>
-        <p class="col-6 description"></p>
-        <button class="btn saveBtn col-1"></button>
-      </div>
-      <!-- 12PM Timeblock -->
-      <div class="row justify-content-center time-block">
-        <div class="col-1 hour">12 PM</div>
-        <p class="col-6 description"></p>
-        <button class="btn saveBtn col-1"></button>
-      </div>
-      <!-- 1PM Timeblock -->
-      <div class="row justify-content-center time-block">
-        <div class="col-1 hour">1 PM</div>
-        <p class="col-6 description"></p>
-        <button class="btn saveBtn col-1"></button>
-      </div>
-      <!-- 2PM Timeblock -->
-      <div class="row justify-content-center time-block">
-        <div class="col-1 hour">2 PM</div>
-        <p class="col-6 description"></p>
-        <button class="btn saveBtn col-1"></button>
-      </div>
-      <!-- 3PM Timeblock -->
-      <div class="row justify-content-center time-block">
-        <div class="col-1 hour">3 PM</div>
-        <p class="col-6 description"></p>
-        <button class="btn saveBtn col-1"></button>
-      </div>
-      <!-- 4PM Timeblock -->
-      <div class="row justify-content-center time-block">
-        <div class="col-1 hour">4 PM</div>
-        <p class="col-6 description"></p>
-        <button class="btn saveBtn col-1"></button>
-      </div>
-      <!-- 5PM Timeblock -->
-      <div class="row justify-content-center time-block">
-        <div class="col-1 hour">5 PM</div>
-        <p class="col-6 description"></p>
-        <button class="btn saveBtn col-1"></button>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css"
+    integrity="sha512-UyNhw5RNpQaCai2EdC+Js0QL4RlVmiq41DkmCJsRV3ZxipG2L0HhTqIf/H9Hp8ez2EnFlkBnjRGJU2stW3Lj+w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <title>Work Day Scheduler</title>
+</head>
+
+<body>
+  <header class="jumbotron">
+    <h1 class="display-3">Work Day Scheduler</h1>
+    <p class="lead">A simple calendar app for scheduling your work day</p>
+    <!-- Displays the current Day -->
+    <p id="currentDay" class="lead"></p>
+  </header>
+  <div class="container">
+    <!-- 8AM Timeblock -->
+    <div class="row justify-content-center time-block">
+      <div class="col-1 hour">12 PM</div>
+      <p class="col-6 description"></p>
+      <button class="btn saveBtn col-1"><span class="oi oi-plus"></span></button>
     </div>
+    <!-- 9AM Timeblock -->
+    <div class="row justify-content-center time-block">
+      <div class="col-1 hour">9 AM</div>
+      <p class="col-6 description"></p>
+      <button class="btn saveBtn col-1"><span class="oi oi-plus"></span></button>
+    </div>
+    <!-- 10AM Timeblock -->
+    <div class="row justify-content-center time-block">
+      <div class="col-1 hour">10 AM</div>
+      <p class="col-6 description"></p>
+      <button class="btn saveBtn col-1"><span class="oi oi-plus"></span></button>
+    </div>
+    <!-- 11AM Timeblock -->
+    <div class="row justify-content-center time-block">
+      <div class="col-1 hour">11 AM</div>
+      <p class="col-6 description"></p>
+      <button class="btn saveBtn col-1"><span class="oi oi-plus"></span></button>
+    </div>
+    <!-- 12PM Timeblock -->
+    <div class="row justify-content-center time-block">
+      <div class="col-1 hour">12 PM</div>
+      <p class="col-6 description"></p>
+      <button class="btn saveBtn col-1"><span class="oi oi-plus"></span></button>
+    </div>
+    <!-- 1PM Timeblock -->
+    <div class="row justify-content-center time-block">
+      <div class="col-1 hour">1 PM</div>
+      <p class="col-6 description"></p>
+      <button class="btn saveBtn col-1"><span class="oi oi-plus"></span></button>
+    </div>
+    <!-- 2PM Timeblock -->
+    <div class="row justify-content-center time-block">
+      <div class="col-1 hour">2 PM</div>
+      <p class="col-6 description"></p>
+      <button class="btn saveBtn col-1"><span class="oi oi-plus"></span></button>
+    </div>
+    <!-- 3PM Timeblock -->
+    <div class="row justify-content-center time-block">
+      <div class="col-1 hour">3 PM</div>
+      <p class="col-6 description"></p>
+      <button class="btn saveBtn col-1"><span class="oi oi-plus"></span></button>
+    </div>
+    <!-- 4PM Timeblock -->
+    <div class="row justify-content-center time-block">
+      <div class="col-1 hour">4 PM</div>
+      <p class="col-6 description"></p>
+      <button class="btn saveBtn col-1"><span class="oi oi-plus"></span></button>
+    </div>
+    <!-- 5PM Timeblock -->
+    <div class="row justify-content-center time-block">
+      <div class="col-1 hour">5 PM</div>
+      <p class="col-6 description"></p>
+      <button class="btn saveBtn col-1"><span class="oi oi-plus"></span></button>
+    </div>
+  </div>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="./assets/js/script.js"></script>
-  </body>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src="./assets/js/script.js"></script>
+</body>
+
 </html>
