--- a/index.html
+++ b/index.html
@@ -26,62 +26,62 @@
   </header>
   <div class="container">
     <!-- 8AM Timeblock -->
-    <div class="row justify-content-center time-block">
-      <div class="col-1 hour">12 PM</div>
+    <div id="8" class="row justify-content-center time-block">
+      <h5 class="col-1 hour">8 AM</h5>
       <p class="col-6 description"></p>
       <button class="btn saveBtn col-1"><span class="oi oi-plus"></span></button>
     </div>
     <!-- 9AM Timeblock -->
-    <div class="row justify-content-center time-block">
-      <div class="col-1 hour">9 AM</div>
+    <div id="9" class="row justify-content-center time-block">
+      <h5 class="col-1 hour">9 AM</h5>
       <p class="col-6 description"></p>
       <button class="btn saveBtn col-1"><span class="oi oi-plus"></span></button>
     </div>
     <!-- 10AM Timeblock -->
-    <div class="row justify-content-center time-block">
-      <div class="col-1 hour">10 AM</div>
+    <div id="10" class="row justify-content-center time-block">
+      <h5 class="col-1 hour">10 AM</h5>
       <p class="col-6 description"></p>
       <button class="btn saveBtn col-1"><span class="oi oi-plus"></span></button>
     </div>
     <!-- 11AM Timeblock -->
-    <div class="row justify-content-center time-block">
-      <div class="col-1 hour">11 AM</div>
-      <p class="col-6 description"></p>
+    <div id="11" class="row justify-content-center time-block">
+      <h5 class="col-1 hour">11 AM</h5>
+      <p  class="col-6 description"></p>
       <button class="btn saveBtn col-1"><span class="oi oi-plus"></span></button>
     </div>
     <!-- 12PM Timeblock -->
-    <div class="row justify-content-center time-block">
-      <div class="col-1 hour">12 PM</div>
-      <p class="col-6 description"></p>
+    <div id="12" class="row justify-content-center time-block">
+      <h5 class="col-1 hour">12 PM</h5>
+      <p class="col-6 description">test</p>
       <button class="btn saveBtn col-1"><span class="oi oi-plus"></span></button>
     </div>
     <!-- 1PM Timeblock -->
-    <div class="row justify-content-center time-block">
-      <div class="col-1 hour">1 PM</div>
+    <div id="13" class="row justify-content-center time-block">
+      <h5 class="col-1 hour">1 PM</h5>
       <p class="col-6 description"></p>
       <button class="btn saveBtn col-1"><span class="oi oi-plus"></span></button>
     </div>
     <!-- 2PM Timeblock -->
-    <div class="row justify-content-center time-block">
-      <div class="col-1 hour">2 PM</div>
+    <div id="14" class="row justify-content-center time-block">
+      <h5 class="col-1 hour">2 PM</h5>
       <p class="col-6 description"></p>
       <button class="btn saveBtn col-1"><span class="oi oi-plus"></span></button>
     </div>
     <!-- 3PM Timeblock -->
-    <div class="row justify-content-center time-block">
-      <div class="col-1 hour">3 PM</div>
+    <div id="15" class="row justify-content-center time-block">
+      <h5 class="col-1 hour">3 PM</h5>
       <p class="col-6 description"></p>
       <button class="btn saveBtn col-1"><span class="oi oi-plus"></span></button>
     </div>
     <!-- 4PM Timeblock -->
-    <div class="row justify-content-center time-block">
-      <div class="col-1 hour">4 PM</div>
+    <div id="16" class="row justify-content-center time-block">
+      <h5 class="col-1 hour">4 PM</h5>
       <p class="col-6 description"></p>
       <button class="btn saveBtn col-1"><span class="oi oi-plus"></span></button>
     </div>
     <!-- 5PM Timeblock -->
-    <div class="row justify-content-center time-block">
-      <div class="col-1 hour">5 PM</div>
+    <div id="17" class="row justify-content-center time-block">
+      <h5 class="col-1 hour">5 PM</h5>
       <p class="col-6 description"></p>
       <button class="btn saveBtn col-1"><span class="oi oi-plus"></span></button>
     </div>
