add audit time method to recolor p elements based on time

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- 12PM Timeblock -->
     <div id="12" class="row justify-content-center time-block">
       <h5 class="col-1 hour">12 PM</h5>
-      <p class="col-6 description">test</p>
+      <p class="col-6 description"></p>
       <button class="btn saveBtn col-1"><span class="oi oi-plus"></span></button>
     </div>
     <!-- 1PM Timeblock -->
